[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
name = "core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database operations
rusqlite = { version = "0.30", features = ["bundled"] }

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for webhooks
reqwest = { version = "0.11", features = ["json"] }

# Cron parsing
cron = "0.12"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
